# harp

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  LICENSE.rst  Makefile  Procfile  README.md  README.rst  RELEASE.rst  conftest.py  docker-compose.yml  pyproject.toml  run
.benchmarks/Darwin-CPython-3.12-64bit/: 0001_0.2.1.json  0002_0.2.2.json  0003_0.2.3.json  0004_0.3.0.json  0005_0.3.2.json  0006_0.4.0.json
.benchmarks/Linux-CPython-3.12-64bit/: 0003_0.2.3.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: documentation.yml  playwright.yml
docs/: .gitignore  Makefile  _quicktoc.rst  conf.py  faq.rst  gotchas.rst  index.rst
docs/_extensions/: jsonschema.py  services.py
docs/_templates/: page.html
docs/apps/: dashboard  dashboard.rst  index.rst  proxy  proxy.rst  sqlalchemy_storage  sqlalchemy_storage.rst
docs/changelogs/: 0.1.3.rst  0.2.0.rst  0.2.1.rst  0.5.1.rst  0.7.0.rst  0.7.0a1.rst  0.7.0a2.rst  0.7.1.rst  0.7.2.rst  index.rst  unreleased.rst
docs/commandline/: index.rst
docs/config/: index.rst
docs/configuration/: basics.rst  endpoints.rst  index.rst  logging.rst  storage.rst
docs/contribute/: _toc.rst  applications.rst  architecture.rst  branching.rst  dependency-injection-examples.rst  dependency-injection.rst  docker.rst  events.rst  index.rst  introduction.rst  overview.rst  release.rst  roadmap.rst  settings.rst
docs/core/: events.asgi.dot  events.config.dot  events.rst  index.rst  services.rst
docs/develop/: _toc.rst  customize.rst  extend.rst  index.rst  run.rst
docs/development/: benchmarks.rst  dependencies.rst  frontend.rst  ideas.rst  index.rst  release.rst  roadmap.rst
docs/features/: _toc.rst  agregation-and-splitting.rst  alerting.rst  auditlog.rst  basics.rst  batching.rst  caching.rst  circuit-breaker.rst  configuration.rst  dashboard.rst  http-client.rst  http-proxy.rst  index.rst  intelligence.rst  normalization-and-typing.rst  prefetching.rst  proxy.rst  retrying.rst  rewriting.rst  routing.rst  rules.rst
docs/installation/: docker.rst  helm.rst  index.rst  sources.rst
docs/operate/: _toc.rst  index.rst  logging.rst  migrations.rst  prometheus.rst  quickstart.rst  runtime.rst
docs/quickstart/: index.rst
docs/reference/: harp.apis.rst  harp.applications.api.controllers.rst  harp.applications.api.rst  harp.applications.proxy.controllers.rst  harp.applications.proxy.rst  harp.applications.proxy.tests.rst  harp.asgi.rst  harp.cli.rst  harp.contrib.sentry.rst  harp.contrib.sqlite_storage.rst  harp.core.asgi.rst  harp.core.factories.events.rst  harp.core.factories.rst  harp.core.http.rst  harp.core.interfaces.rst  harp.core.interfaces.storage.rst  harp.core.rst  harp.core.tests.rst  harp.core.types.rst  harp.core.views.rst  harp.examples.rst  harp.extensions.rst  harp.extensions.sentry.rst  harp.models.base.rst  harp.models.rst  harp.models.tests.rst  harp.rst  harp.services.database.rst  harp.services.rst  harp.services.storage.rst  harp.testing.rst  harp.testing.stub_api.rst  harp.types.http.rst  harp.types.rst  harp.utils.rst  harp.utils.testing.communicators.rst  harp.utils.testing.rst  index.rst
docs/start/: docker.rst  index.rst  python.rst  quick.rst  sources.rst
docs/user/: _toc.rst  index.rst  overview.rst  performances.rst  system.rst  transactions.rst
examples/: auth.basic.yml  basic.py  postgres.yaml  postgres.yml  repositories.yml  sqlite.yml  stupid_auth.yaml  stupid_auth.yml
examples/basic/: router.py
frontend/: .eslintrc.cjs  .gitignore  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/: App.tsx  TransactionList.tsx  main.tsx
frontend/tests/: overviewPage.spec.ts  systemDependenciesPage.spec.ts  transactionsPage.spec.ts
frontend/types/: twin.d.ts
harp/: __init__.py  __main__.py  _logging.py  asgi.py  errors.py  event_dispatcher.py  factory.py  filter.py  logging.py  proxy.py  proxy_old.not_py  settings.py
harp/apis/: asgi.py
harp/asgi/: __init__.py  context.py  events.py  kernel.py  resolvers.py
harp/cli/: __init__.py  install_dev.py  start.py
harp/commandline/: __init__.py  config.py  examples.py  install.py  install_dev.py  migrations.py  server.py  start.py
harp/config/: __init__.py  application.py  applications.py  asdict.py  builder.py  config.py  configurables.py  defaults.py  errors.py  events.py  utils.py
harp/controllers/: __init__.py  default.py  resolvers.py  routing.py  typing.py
harp/core/: event_dispatcher.py
harp/errors/: __init__.py
harp/event_dispatcher/: __init__.py
harp/examples/: basic.py  default.py  deps.py  httpbin.py
harp/factories/: proxy.py  settings.py
harp/http/: __init__.py  errors.py  requests.py  responses.py  serializers.py  streams.py  typing.py
harp/meta/: __init__.py
harp/models/: __init__.py  base.py  blobs.py  http.py  message.py  messages.py  proxy_endpoint.py  request.py  response.py  transaction.py  transactions.py  utils.py
harp/protocols/: __init__.py  controllers.py  storage.py
harp/services/: __init__.py  containers.py  http.py  models.py  providers.py  references.py  resolvers.py
harp/testing/: base.py  http.py  http_communiator.py
harp/tests/: test_asgi_kernel.py  test_settings.py
harp/types/: __init__.py  signs.py
harp/typing/: __init__.py  controllers.py  global_settings.py  signs.py  storage.py  transactions.py
harp/utils/: __init__.py  apdex.py  arguments.py  background.py  bytes.py  collections.py  commandline.py  dates.py  env.py  guids.py  http.py  identifiers.py  json.py  network.py  packages.py  performances.py  processes.py  services.py  strings.py  tpdex.py  types.py  urls.py
harp/views/: __init__.py  json.py  strings.py
harp_apps/: __init__.py
harp_apps/acme/: __app__.py  lifecycle.py  settings.py
harp_apps/contrib/: __init__.py
harp_apps/dashboard/: __app__.py  __init__.py  (+4 more)
testing/: proxy.py
tests/: conftest.py
tests_benchmarks/: test_basics.py
(+1721 files in other folders)
